# synthetica-standalone-metabase-connector

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
datasets/: datos_sinteticos_empresas.csv
examples/: README.md  docker-compose.yml  mock_gateway.py  mock_metabase.py  proof_yaml_call.py  quickstart.py  run_real_demo.py  seed.sql  setup_metabase.py
src/metabase_mcp/: __init__.py  client.py  server.py
src/metabase_mcp/tools/: __init__.py  create_card_from_sql.py  create_dashboard.py  list_cards.py  list_database_tables.py  list_databases.py  query_card.py  request_synthetic_data_generation.py
tests/: test_client.py  test_client_extended.py  test_server.py  test_tools.py
