[project]
name = "metabase-mcp-server"
version = "0.1.0"
description = "MCP server for Metabase — list cards, run card queries, create dashboards."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Peninsula", email = "matheus.brugger@peninsula.co" }]
keywords = ["mcp", "metabase", "llm", "model-context-protocol", "fastmcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]

dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    # Synthetica mode serializes RepresentationDocs as YAML on the wire,
    # matching Metabase v0.60's declarative format.
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://synthetica.peninsula.co/"

[project.scripts]
metabase-mcp = "metabase_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "build>=1.2.0",
]
examples = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metabase_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/metabase_mcp", "README.md", "pyproject.toml"]

[tool.ruff]
target-version = "py311"
line-length = 100
